--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "alembic>=1.16.5",
     "dotenv>=0.9.9",
     "fastapi>=0.118.0",
     "psycopg2-binary>=2.9.10",
