--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,5 +11,7 @@ dependencies = [
     "psycopg2-binary>=2.9.10",
     "pydantic>=2.11.10",
     "sqlalchemy>=2.0.43",
+    "langchain-openai>=0.3.35",
+    "langgraph>=0.6.8",
     "uvicorn>=0.37.0",
 ]
