--- a/bot/.env.example
+++ b/bot/.env.example
@@ -9,3 +9,11 @@ LOG_LEVEL=debug
 WEBHOOK_PROXY_URL=
 
 BASE_URL=http://localhost:8080
+
+# Knowledge Base Integration
+# Set to 'false' to disable knowledge base features
+ENABLE_KNOWLEDGE_BASE=true
+
+# Knowledge Base API URL
+# Default: http://localhost:8000
+KNOWLEDGE_BASE_URL=http://localhost:8000
