--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,4 +15,14 @@ dependencies = [
     "langgraph>=0.6.8",
     "uvicorn>=0.37.0",
     "httpx>=0.28.1",
+    "opentelemetry-api>=1.20.0",
+    "opentelemetry-sdk>=1.20.0",
+    "opentelemetry-exporter-otlp>=1.20.0",
+    "opentelemetry-instrumentation-fastapi>=0.41b0",
+    "opentelemetry-instrumentation-requests>=0.41b0",
+    "opentelemetry-instrumentation-celery>=0.41b0",
+    "opentelemetry-instrumentation-redis>=0.41b0",
+    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
+    "opentelemetry-distro>=0.58b0",
+    "opentelemetry-instrumentation>=0.58b0",
 ]
