--- a/bot/package.json
+++ b/bot/package.json
@@ -20,6 +20,13 @@
     "rebuild": "npm run clean && npm run build"
   },
   "dependencies": {
+    "@opentelemetry/api": "^1.7.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.65.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.206.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.206.0",
+    "@opentelemetry/resources": "2.1.0",
+    "@opentelemetry/sdk-node": "^0.206.0",
+    "@opentelemetry/semantic-conventions": "^1.28.0",
     "axios": "^1.12.2",
     "probot": "^13.4.5"
   },
@@ -28,7 +35,7 @@
     "nock": "^14.0.5",
     "smee-client": "^2.0.0",
     "typescript": "^5.8.3",
-    "vitest": "^2.0.0"
+    "vitest": "^3.2.4"
   },
   "overrides": {
     "@types/pg": "8.15.1"
