--- a/knowledge-base/.env.example
+++ b/knowledge-base/.env.example
@@ -27,3 +27,13 @@ DEFAULT_RETRIEVAL_K=5
 API_TITLE=Learnings API
 API_DESCRIPTION=CodeRabbit-inspired learnings ingestion and retrieval system
 API_VERSION=1.0.0
+
+# OpenTelemetry Configuration
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
+OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://localhost:4318/v1/traces
+OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=http://localhost:4318/v1/metrics
+OTEL_SERVICE_NAME=learnings-system
+SERVICE_VERSION=1.0.0
+
+# Optional: Enable debug logging
+OTEL_LOG_LEVEL=debug
