--- a/knowledge-base/pyproject.toml
+++ b/knowledge-base/pyproject.toml
@@ -18,6 +18,15 @@ dependencies = [
     "qdrant-client>=1.12.0",
     "openai>=1.55.0",
     "langgraph>=0.6.8",
+    "opentelemetry-api>=1.20.0",
+    "opentelemetry-sdk>=1.20.0",
+    "opentelemetry-exporter-otlp>=1.20.0",
+    "opentelemetry-instrumentation-fastapi>=0.41b0",
+    "opentelemetry-instrumentation-requests>=0.41b0",
+    "opentelemetry-instrumentation-celery>=0.41b0",
+    "opentelemetry-instrumentation-redis>=0.41b0",
+    "opentelemetry-distro>=0.58b0",
+    "opentelemetry-instrumentation>=0.58b0",
 ]
 
 [project.optional-dependencies]
