added auth for the user
Signed-off-by: Jagjeevan Kashid <jagjeevandev97@gmail.com>

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -9,6 +9,7 @@ LOG_LEVEL=debug
 WEBHOOK_PROXY_URL=
 
 BASE_URL=http://localhost:8080
+BACKEND_URL=http://localhost:8000
 
 # Knowledge Base Integration
 # Set to 'false' to disable knowledge base features
