--- a/knowledge-base/docker-compose.yml
+++ b/knowledge-base/docker-compose.yml
@@ -14,25 +14,19 @@ services:
       timeout: 3s
       retries: 5
 
-  # Qdrant vector database
-  qdrant:
-    image: qdrant/qdrant:latest
-    container_name: learnings-qdrant
-    ports:
-      - "6333:6333"
-      - "6334:6334"
-    volumes:
-      - qdrant_data:/qdrant/storage
-    environment:
-      - QDRANT__SERVICE__GRPC_PORT=6334
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:6333/"]
-      interval: 10s
-      timeout: 3s
-      retries: 5
+elasticsearch:
+  image: docker.elastic.co/elasticsearch/elasticsearch:8.15.0
+  container_name: elasticsearch
+  environment:
+    - discovery.type=single-node
+    - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+    - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+    - AWS_REGION=ap-south-1
+    - SEARCH_BACKUP=${SEARCH_BACKUP:-off}
+  volumes:
+    - ./es_data:/usr/share/elasticsearch/data
+    - ./entrypoint.sh:/usr/local/bin/entrypoint.sh
+  entrypoint: ["/usr/local/bin/entrypoint.sh"]
+  ports:
+    - "9200:9200"
 
-volumes:
-  redis_data:
-    driver: local
-  qdrant_data:
-    driver: local
