--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -1,8 +1,16 @@
 FROM node:22-slim
 WORKDIR /usr/src/app
+
 COPY package.json package-lock.json ./
+
 RUN npm ci --production
+
 RUN npm cache clean --force
+
 ENV NODE_ENV="production"
+
+ENV PORT=3000
+
 COPY . .
+
 CMD [ "npm", "start" ]
