--- a/knowledge-base/.env.example
+++ b/knowledge-base/.env.example
@@ -1,39 +1,19 @@
-# OpenAI Configuration
-OPENAI_API_KEY=your_openai_api_key_here
+# Elasticsearch Configuration
+ELASTICSEARCH_URL=http://localhost:9200
+INDEX_NAME=open_rabbit_knowledge_base
 
-# Embedding model: text-embedding-3-small (cheaper) or text-embedding-3-large (better)
-EMBEDDING_MODEL=text-embedding-3-large
-EMBEDDING_DIMENSIONS=3072
-
-# LLM model for extraction
-LLM_MODEL=gpt-4o-mini
-LLM_TEMPERATURE=0.0
-
-# Vector Database (Qdrant)
-QDRANT_URL=http://localhost:6333
-QDRANT_COLLECTION_NAME=learnings
-# QDRANT_API_KEY=optional_for_cloud
-
-# Redis & Celery
+# Redis Configuration
 REDIS_URL=redis://localhost:6379/0
-CELERY_BROKER_URL=redis://localhost:6379/0
-CELERY_RESULT_BACKEND=redis://localhost:6379/0
 
-# Application Settings
-MAX_LEARNING_LENGTH=500
-DEFAULT_RETRIEVAL_K=5
+# OpenAI Configuration
+OPENAI_API_KEY=your-openai-api-key-here
+OPENAI_EMBEDDING_MODEL=text-embedding-3-small
+OPENAI_CHAT_MODEL=gpt-4
 
 # API Configuration
-API_TITLE=Learnings API
-API_DESCRIPTION=CodeRabbit-inspired learnings ingestion and retrieval system
-API_VERSION=1.0.0
+API_HOST=0.0.0.0
+API_PORT=8000
 
-# OpenTelemetry Configuration
-OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
-OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://localhost:4318/v1/traces
-OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=http://localhost:4318/v1/metrics
-OTEL_SERVICE_NAME=learnings-system
-SERVICE_VERSION=1.0.0
-
-# Optional: Enable debug logging
-OTEL_LOG_LEVEL=debug
+# Celery Configuration
+CELERY_BROKER_URL=redis://localhost:6379/0
+CELERY_RESULT_BACKEND=redis://localhost:6379/0
