--- a/knowledge-base/.gitignore
+++ b/knowledge-base/.gitignore
@@ -16,12 +16,9 @@ parts/
 sdist/
 var/
 wheels/
-pip-wheel-metadata/
-share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
 
 # Virtual environments
 venv/
@@ -29,33 +26,23 @@ env/
 ENV/
 .venv
 
-# IDEs
+# Environment variables
+.env
+
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
-# Environment variables
-.env
-.env.local
-.env.*.local
-
 # Logs
 *.log
-logs/
-celery*.log
 
-# Testing
-.pytest_cache/
-.coverage
-htmlcov/
-.tox/
+# Database
+*.db
+*.sqlite
 
 # OS
 .DS_Store
 Thumbs.db
-
-# Project specific
-qdrant_data/
-redis_data/
