--- a/knowledge-base/docker-compose.yml
+++ b/knowledge-base/docker-compose.yml
@@ -1,32 +1,36 @@
 services:
-  # Redis for Celery broker/backend
+  elasticsearch:
+    image: elasticsearch:8.16.0
+    container_name: kb_elasticsearch
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ports:
+      - "9200:9200"
+    volumes:
+      - elasticsearch_data:/usr/share/elasticsearch/data
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:9200 || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
   redis:
     image: redis:7-alpine
-    container_name: learnings-redis
+    container_name: kb_redis
     ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
-    command: redis-server --appendonly yes
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
-      interval: 5s
-      timeout: 3s
+      interval: 30s
+      timeout: 10s
       retries: 5
 
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.15.0
-    container_name: elasticsearch
-    environment:
-      - discovery.type=single-node
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-      - AWS_REGION=ap-south-1
-      - SEARCH_BACKUP=${SEARCH_BACKUP:-off}
-    volumes:
-      - ./es_data:/usr/share/elasticsearch/data
-      - ./entrypoint.sh:/usr/local/bin/entrypoint.sh
-    entrypoint: ["/usr/local/bin/entrypoint.sh"]
-    ports:
-      - "9200:9200"
-
+volumes:
+  elasticsearch_data:
+    driver: local
+  redis_data:
+    driver: local
