feat: add bot webhook and GitHub integration for PR reviews
Backend:
- Add comprehensive bot_webhook routes with production logging
- Add GitHubCommentService for posting reviews with inline comments
- Add review request/response models with dry_run support
- Add feedback routes for collecting user feedback

Bot (Probot):
- Add autoReview.ts for automatic PR review on open
- Add manualReview.ts for @open-rabbit mention triggers
- Update comment.ts with improved formatting
- Update index.ts with new event handlers
- Remove legacy getfiles.ts

Features:
- Clone repo, read changed files, invoke SupervisorAgent
- Format review output with severity indicators
- Support dry_run mode for testing without posting
- Session-correlated logging throughout

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -9,7 +9,7 @@ LOG_LEVEL=debug
 WEBHOOK_PROXY_URL=
 
 BASE_URL=http://localhost:8080
-BACKEND_URL=http://localhost:8000
+BACKEND_URL=http://localhost:8080
 
 # Knowledge Base Integration
 # Set to 'false' to disable knowledge base features
@@ -18,3 +18,11 @@ ENABLE_KNOWLEDGE_BASE=true
 # Knowledge Base API URL
 # Default: http://localhost:8000
 KNOWLEDGE_BASE_URL=http://localhost:8000
+
+# Test Mode Configuration
+# Set to 'true' to enable test mode endpoints
+TEST_MODE=false
+
+# GitHub Personal Access Token (required for test mode)
+# Needs 'repo' scope for posting reviews
+GITHUB_PAT=
