--- a/bot/package.json
+++ b/bot/package.json
@@ -20,6 +20,7 @@
     "rebuild": "npm run clean && npm run build"
   },
   "dependencies": {
+    "@octokit/rest": "^22.0.1",
     "@opentelemetry/api": "^1.7.0",
     "@opentelemetry/auto-instrumentations-node": "^0.65.0",
     "@opentelemetry/exporter-metrics-otlp-http": "^0.206.0",
