feat: implement knowledge base feedback loop with semantic search
- Add KB client (kb_client.py) for backend to communicate with KB service
- Add FeedbackProcessor agent to extract learnings from user feedback
- Add user_feedback routes for submitting and processing feedback
- Update workflow to fetch KB context before generating reviews
- Add search endpoints to KB service (GET /learnings/search, POST /learnings/pr-context)
- Add feedbackHandler to bot for capturing user reactions and replies
- Update bot knowledgeBase service to use new KB API format
- Add database models and migrations for feedback storage
- Add integration tests for KB workflow

The feedback loop flow:
1. User reacts/replies to bot's review comment
2. Bot sends feedback to backend /user-feedback/submit
3. FeedbackProcessor extracts structured learning via LLM
4. Learning stored in KB with OpenAI embeddings
5. Future reviews query KB for relevant context
6. Reviews are enhanced with past learnings

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -9,11 +9,11 @@ LOG_LEVEL=debug
 WEBHOOK_PROXY_URL=
 
 BASE_URL=http://localhost:8080
-BACKEND_URL=http://localhost:8000
+BACKEND_URL=http://localhost:8080
 
 # Knowledge Base Integration
-# Set to 'false' to disable knowledge base features
-ENABLE_KNOWLEDGE_BASE=true
+# Set to 'true' to enable knowledge base and feedback learning features
+KB_ENABLED=false
 
 # Knowledge Base API URL
 # Default: http://localhost:8000
