--- a/backend/.env.example
+++ b/backend/.env.example
@@ -87,3 +87,22 @@ GITHUB_WEBHOOK_SECRET=
 # Redis (for task queue, optional)
 # =============================================================================
 REDIS_URL=redis://localhost:6379/0
+
+# =============================================================================
+# E2B Sandbox Configuration
+# =============================================================================
+# E2B API key (get from https://e2b.dev/dashboard)
+E2B_API_KEY=e2b_xxx
+
+# Sandbox timeout in milliseconds (default: 5 minutes)
+E2B_SANDBOX_TIMEOUT_MS=300000
+
+# Custom E2B template ID (optional, uses default code-interpreter if not set)
+# Build your template with: e2b template build --dockerfile e2b.Dockerfile --name open-rabbit
+E2B_TEMPLATE_ID=
+
+# Maximum retries for sandbox operations before queueing
+E2B_MAX_RETRIES=3
+
+# Retry delay in seconds for failed sandbox operations
+E2B_RETRY_DELAY_SECONDS=5
