--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -34,4 +34,6 @@ dependencies = [
     "opentelemetry-distro>=0.58b0",
     "opentelemetry-instrumentation>=0.58b0",
     "openai>=1.60.0",
+    # E2B Sandbox for secure code execution
+    "e2b-code-interpreter>=1.0.0",
 ]
