--- a/backend/.env.example
+++ b/backend/.env.example
@@ -106,3 +106,10 @@ E2B_MAX_RETRIES=3
 
 # Retry delay in seconds for failed sandbox operations
 E2B_RETRY_DELAY_SECONDS=5
+
+
+
+KB_ENABLED=true
+
+KNOWLEDGE_BASE_URL=http://localhost:8000
+
