feat: added webSearch
Signed-off-by: Jagjeevan Kashid <jagjeevandev97@gmail.com>

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -107,6 +107,34 @@ E2B_MAX_RETRIES=3
 # Retry delay in seconds for failed sandbox operations
 E2B_RETRY_DELAY_SECONDS=5
 
+# =============================================================================
+# Web Search Configuration (for Package Intelligence)
+# =============================================================================
+# Brave Search API key (get from https://brave.com/search/api/)
+# Used to search for package breaking changes, deprecations, and updates
+BRAVE_API_KEY=
+
+# Enable/disable web search for package intelligence (default: true)
+SEARCH_ENABLED=true
+
+# Search timeout in seconds (default: 10)
+SEARCH_TIMEOUT=10
+
+# Maximum search results to return (default: 5)
+SEARCH_MAX_RESULTS=5
+
+# Cache TTL for search results in seconds (default: 86400 = 24 hours)
+SEARCH_CACHE_TTL=86400
+
+# Maximum cache entries for search results (default: 1000)
+SEARCH_CACHE_MAX_ENTRIES=1000
+
+# Cache TTL for package info in seconds (default: 43200 = 12 hours)
+PACKAGE_CACHE_TTL=43200
+
+# Maximum cache entries for package info (default: 500)
+PACKAGE_CACHE_MAX_ENTRIES=500
+
 
 
 KB_ENABLED=true
