feat: added Evaluators with langfuse
Signed-off-by: Jagjeevan Kashid <jagjeevandev97@gmail.com>

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -76,6 +76,15 @@ OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
 OTEL_SERVICE_NAME=openrabbit-backend
 
 # =============================================================================
+# Langfuse Configuration (for observability and evals)
+# =============================================================================
+# Get your keys from https://cloud.langfuse.com
+LANGFUSE_PUBLIC_KEY=pk-lf-your-public-key
+LANGFUSE_SECRET_KEY=sk-lf-your-secret-key
+LANGFUSE_HOST=https://cloud.langfuse.com
+LANGFUSE_ENABLED=true
+
+# =============================================================================
 # GitHub Integration
 # =============================================================================
 # GitHub App credentials (if using GitHub integration)
