--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,12 +17,10 @@ dependencies = [
     "langgraph>=0.6.8",
     "uvicorn>=0.37.0",
     "httpx>=0.28.1",
-    # Tree-sitter for code parsing
     "tree-sitter>=0.25.2",
     "tree-sitter-python>=0.23.0",
     "tree-sitter-javascript>=0.23.0",
     "tree-sitter-typescript>=0.23.0",
-    # OpenTelemetry
     "opentelemetry-api>=1.20.0",
     "opentelemetry-sdk>=1.20.0",
     "opentelemetry-exporter-otlp>=1.20.0",
@@ -34,8 +32,8 @@ dependencies = [
     "opentelemetry-distro>=0.58b0",
     "opentelemetry-instrumentation>=0.58b0",
     "openai>=1.60.0",
-    # E2B Sandbox for secure code execution
     "e2b-code-interpreter>=1.0.0",
+    "langfuse>=3.11.2",
 ]
 
 [dependency-groups]
