chore: aaded auth to both
Signed-off-by: Jagjeevan Kashid <jagjeevandev97@gmail.com>

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -19,6 +19,11 @@ KB_ENABLED=false
 # Default: http://localhost:8000
 KNOWLEDGE_BASE_URL=http://localhost:8000
 
+# Authentication Configuration
+# Set to 'true' to enable owner authorization checks
+# When enabled, only registered owners can use the bot
+AUTH_ENABLED=false
+
 # Test Mode Configuration
 # Set to 'true' to enable test mode endpoints
 TEST_MODE=false
