--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,8 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-three/fiber": "^9.3.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
     "fumadocs-core": "^16.4.6",
@@ -29,9 +31,11 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
+    "postprocessing": "^6.36.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "sonner": "^2.0.7",
+    "three": "^0.167.1",
     "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
