--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,26 +1,20 @@
 [project]
 name = "backend"
 version = "0.1.0"
-description = "Add your description here"
+description = "Open Rabbit Backend API Server"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    # Local agent package
+    "open-rabbit-agent",
+    # Backend-specific dependencies
     "alembic>=1.16.5",
     "dotenv>=0.9.9",
     "fastapi>=0.118.0",
     "psycopg2-binary>=2.9.10",
-    "pydantic>=2.11.10",
     "sqlalchemy>=2.0.43",
-    "langchain-openai>=0.3.9",
-    "langchain-anthropic>=0.3.0",
-    "langchain-elasticsearch>=0.3.0",
-    "langgraph>=0.6.8",
     "uvicorn>=0.37.0",
-    "httpx>=0.28.1",
-    "tree-sitter>=0.25.2",
-    "tree-sitter-python>=0.23.0",
-    "tree-sitter-javascript>=0.23.0",
-    "tree-sitter-typescript>=0.23.0",
+    # OpenTelemetry (backend-specific observability)
     "opentelemetry-api>=1.20.0",
     "opentelemetry-sdk>=1.20.0",
     "opentelemetry-exporter-otlp>=1.20.0",
@@ -31,13 +25,14 @@ dependencies = [
     "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
     "opentelemetry-distro>=0.58b0",
     "opentelemetry-instrumentation>=0.58b0",
-    "openai>=1.60.0",
-    "e2b-code-interpreter>=1.0.0",
-    "langfuse>=3.11.2",
 ]
+
+[tool.uv.sources]
+open-rabbit-agent = { path = "../agent", editable = true }
 
 [dependency-groups]
 dev = [
     "pytest>=9.0.2",
     "pytest-asyncio>=1.3.0",
 ]
+
