--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -4,27 +4,23 @@ version = "0.1.0"
 description = "Multi-Agent Code Review System with Supervisor-Worker Architecture"
 readme = "README.md"
 requires-python = ">=3.13"
+authors = [
+    { name = "Jagjeevan Kashid", email = "jagjeevandev97@gmail.com" }
+]
 dependencies = [
-    # LangChain ecosystem
     "langchain-core>=0.3.0",
     "langchain-openai>=0.3.9",
     "langchain-anthropic>=0.3.0",
     "langchain-elasticsearch>=0.3.0",
     "langgraph>=0.6.8",
-    # Tree-sitter parsers
     "tree-sitter>=0.25.2",
     "tree-sitter-python>=0.23.0",
     "tree-sitter-javascript>=0.23.0",
     "tree-sitter-typescript>=0.23.0",
-    # LLM providers
     "openai>=1.60.0",
-    # E2B sandbox
     "e2b-code-interpreter>=1.0.0",
-    # Observability
     "langfuse>=3.11.2",
-    # HTTP client
     "httpx>=0.28.1",
-    # Data validation
     "pydantic>=2.11.10",
 ]
 
