--- a/knowledge-base/pyproject.toml
+++ b/knowledge-base/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 description = "A structured knowledge base for storing and retrieving code learnings"
 readme = "README.md"
 requires-python = ">=3.13"
+authors = [
+    { name = "Jagjeevan Kashid", email = "jagjeevandev97@gmail.com" }
+]
 dependencies = [
     "langchain-elasticsearch>=0.4.0",
     "langchain-openai>=0.3.35",
